cameleon-impl/tests/macros/wrong_access_right.stderr
error: expected NA, RO, WO, or RW
 --> $DIR/wrong_access_right.rs:5:34
  |
5 |     #[register(len = 2, access = Ro, ty = u16)]
  |                                  ^^
